--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,84 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>Final 2020 Free Agent Leaderboard</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Philip Rivers          </td><td><font size=3>1930</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>1785</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Drew Lock              </td><td><font size=3>1440</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Gardner Minshew        </td><td><font size=3>1125</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Taysom Hill            </td><td><font size=3>1045</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>1030</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 970</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 965</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Nick Foles             </td><td><font size=3> 780</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Mike Glennon           </td><td><font size=3> 595</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Alex Smith             </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Jared Goff             </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Joe Mixon              </td><td><font size=3> 630</td></tr>
-<tr><td><font size=3>Carlos Hyde            </td><td><font size=3> 570</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>Rex Burkhead           </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>Frank Gore             </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Brian Hill             </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>Mark Ingram            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Peyton Barber          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Alex Collins           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Duke Johnson           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Kerryon Johnson        </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Ty Johnson             </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Dion Lewis             </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Alfred Morris          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Mark Ingram            </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>JaMycal Hasty          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Gus Edwards            </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Alexander Mattison     </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Nelson Agholor         </td><td><font size=3>1145</td></tr>
-<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 970</td></tr>
-<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 900</td></tr>
-<tr><td><font size=3>Mike Williams          </td><td><font size=3> 775</td></tr>
-<tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 690</td></tr>
-<tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>Emmanuel Sanders       </td><td><font size=3> 640</td></tr>
-<tr><td><font size=3>Russell Gage           </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 590</td></tr>
-<tr><td><font size=3>David Moore            </td><td><font size=3> 580</td></tr>
-<tr><td><font size=3>Jarvis Landry          </td><td><font size=3> 550</td></tr>
-<tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 545</td></tr>
+<tr><td><font size=3>Christian Kirk         </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Zach Pascal            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Marquise Brown         </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Zay Jones              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Jalen Reagor           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Marvin Jones           </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Danny Amendola         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Chris Hogan            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Quintez Cephus         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Tim Patrick            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Trent Sherfield        </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Irv Smith              </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Darren Fells           </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Dan Arnold             </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Trey Burton            </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Chris Herndon          </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Evan Engram            </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Richard Rodgers        </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Kyle Rudolph           </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Donald Parham          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jacob Hollister        </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>OJ Howard              </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Dawson Knox            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Chris Manhertz         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Gerald Everett         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Albert Okwuegbunam     </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>David Njoku            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3>  30</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3>1280</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3>1215</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>1165</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3>1095</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3>1000</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 915</td></tr>
-<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 915</td></tr>
-<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 885</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 810</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 695</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Sam Ficken             </td><td><font size=3> 445</td></tr>
-<tr><td><font size=3>Sergio Castillo        </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>Ryan Santoso           </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Josh Lambo             </td><td><font size=3>  15</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>  15</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  10</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Gabriel Davis          </td><td><font size=3> 840</td></tr>
-<tr><td><font size=3>La'Mical Perine        </td><td><font size=3> 445</td></tr>
-<tr><td><font size=3>Sam Sloman             </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>KJ Hamler              </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>AJ Dillon              </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Quintez Cephus         </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>Collin Johnson         </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Michael Pittman        </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Harrison Bryant        </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Isaiah Rodgers         </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Antonio Williams       </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>Freddie Swain          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Tyler Johnson          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Eli Mitchell           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Anthony Schwartz       </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Jake Verity            </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
