--- a/strength.html
+++ b/strength.html
@@ -4,104 +4,104 @@
 </table>
 <table border=2>
 <tr><td><b>Position</b></td>
+    <td width=42><b>Matthew</b></td>
     <td width=42><b>Rich</b></td>
     <td width=42><b>Steven</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>Roger</b></td>
-    <td width=42><b>John</b></td>
-    <td width=42><b>Sam</b></td>
-    <td width=42><b>Randy</b></td>
     <td width=42><b>Grant</b></td>
-    <td width=42><b>Matthew</b></td></tr>
+    <td width=42><b>Mike</b></td>
+    <td width=42><b>States</b></td>
+    <td width=42><b>Roger</b></td>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>Sam</b></td>
+    <td width=42><b>John</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>3140</td>
-    <td align='right'>3310</td>
-    <td align='right'>2985</td>
-    <td align='right'>2435</td>
-    <td align='right'>3020</td>
-    <td align='right'>2975</td>
-    <td align='right'>3530</td>
-    <td align='right'>3200</td>
-    <td align='right'>1770</td>
-    <td align='right'>2790</td></tr>
+    <td align='right'>295</td>
+    <td align='right'>305</td>
+    <td align='right'>110</td>
+    <td align='right'>80</td>
+    <td align='right'>65</td>
+    <td align='right'>310</td>
+    <td align='right'>265</td>
+    <td align='right'>280</td>
+    <td align='right'>0</td>
+    <td align='right'>245</td></tr>
 <tr><td align='right'>Best RB</td>
-    <td align='right'>955</td>
-    <td align='right'>1580</td>
-    <td align='right'>1485</td>
-    <td align='right'>755</td>
-    <td align='right'>725</td>
-    <td align='right'>935</td>
-    <td align='right'>2560</td>
-    <td align='right'>2270</td>
-    <td align='right'>2290</td>
-    <td align='right'>1380</td></tr>
+    <td align='right'>165</td>
+    <td align='right'>110</td>
+    <td align='right'>80</td>
+    <td align='right'>90</td>
+    <td align='right'>45</td>
+    <td align='right'>150</td>
+    <td align='right'>25</td>
+    <td align='right'>45</td>
+    <td align='right'>190</td>
+    <td align='right'>55</td></tr>
 <tr><td align='right'>Other RB's</td>
-    <td align='right'>600</td>
-    <td align='right'>1735</td>
-    <td align='right'>1475</td>
-    <td align='right'>620</td>
-    <td align='right'>1015</td>
-    <td align='right'>1480</td>
-    <td align='right'>1375</td>
-    <td align='right'>1195</td>
-    <td align='right'>860</td>
-    <td align='right'>1000</td></tr>
+    <td align='right'>85</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>45</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>180</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>Best WR</td>
-    <td align='right'>1300</td>
-    <td align='right'>1185</td>
-    <td align='right'>1300</td>
-    <td align='right'>1085</td>
-    <td align='right'>2255</td>
-    <td align='right'>940</td>
-    <td align='right'>1935</td>
-    <td align='right'>840</td>
-    <td align='right'>1585</td>
-    <td align='right'>770</td></tr>
+    <td align='right'>275</td>
+    <td align='right'>105</td>
+    <td align='right'>30</td>
+    <td align='right'>150</td>
+    <td align='right'>50</td>
+    <td align='right'>220</td>
+    <td align='right'>215</td>
+    <td align='right'>75</td>
+    <td align='right'>25</td>
+    <td align='right'>165</td></tr>
 <tr><td align='right'>Other WR's</td>
-    <td align='right'>1655</td>
-    <td align='right'>1175</td>
-    <td align='right'>1340</td>
-    <td align='right'>855</td>
-    <td align='right'>1300</td>
-    <td align='right'>915</td>
-    <td align='right'>940</td>
-    <td align='right'>950</td>
-    <td align='right'>1320</td>
-    <td align='right'>1190</td></tr>
+    <td align='right'>195</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>150</td>
+    <td align='right'>35</td>
+    <td align='right'>25</td>
+    <td align='right'>185</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td></tr>
 <tr><td align='right'>TE</td>
-    <td align='right'>1035</td>
-    <td align='right'>1105</td>
-    <td align='right'>730</td>
-    <td align='right'>1605</td>
-    <td align='right'>425</td>
-    <td align='right'>225</td>
-    <td align='right'>665</td>
-    <td align='right'>680</td>
-    <td align='right'>550</td>
-    <td align='right'>400</td></tr>
+    <td align='right'>185</td>
+    <td align='right'>170</td>
+    <td align='right'>75</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>125</td>
+    <td align='right'>35</td>
+    <td align='right'>120</td>
+    <td align='right'>75</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>1180</td>
-    <td align='right'>955</td>
-    <td align='right'>1270</td>
-    <td align='right'>1135</td>
-    <td align='right'>1465</td>
-    <td align='right'>745</td>
-    <td align='right'>1390</td>
-    <td align='right'>1375</td>
-    <td align='right'>1535</td>
-    <td align='right'>1125</td></tr>
+    <td align='right'>65</td>
+    <td align='right'>115</td>
+    <td align='right'>40</td>
+    <td align='right'>55</td>
+    <td align='right'>100</td>
+    <td align='right'>25</td>
+    <td align='right'>80</td>
+    <td align='right'>105</td>
+    <td align='right'>100</td>
+    <td align='right'>50</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>1070</td>
-    <td align='right'>1665</td>
-    <td align='right'>1125</td>
-    <td align='right'>1060</td>
-    <td align='right'>1010</td>
-    <td align='right'>1655</td>
-    <td align='right'>2705</td>
-    <td align='right'>925</td>
-    <td align='right'>1105</td>
-    <td align='right'>420</td></tr>
+    <td align='right'>95</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>170</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>255</td>
+    <td align='right'>25</td>
+    <td align='right'>105</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>10935</td>
-    <td align='right'>12710</td>
-    <td align='right'>11710</td>
-    <td align='right'>9550</td>
-    <td align='right'>11215</td>
-    <td align='right'>9870</td>
-    <td align='right'>15100</td>
-    <td align='right'>11435</td>
-    <td align='right'>11015</td>
-    <td align='right'>9075</td></tr>
+    <td align='right'>1360</td>
+    <td align='right'>840</td>
+    <td align='right'>360</td>
+    <td align='right'>695</td>
+    <td align='right'>325</td>
+    <td align='right'>775</td>
+    <td align='right'>895</td>
+    <td align='right'>795</td>
+    <td align='right'>640</td>
+    <td align='right'>745</td></tr>
 </table>
